fix out of sync message on not defined pages

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -180,7 +180,7 @@
         }
     )
 </script>
-{% if maintenance != None %}
+{% if maintenance is defined %}
     <div class="content">
     <div class="callout alert global-banner">
         {% if maintenance %}
