--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -180,7 +180,7 @@
         }
     )
 </script>
-{% if maintenance is defined %}
+{% if maintenance is defined and maintenance is not none %}
     <div class="content">
     <div class="callout alert global-banner">
         {% if maintenance %}
