incentive period leaderboard

--- a/webui/templates/address.jinja2
+++ b/webui/templates/address.jinja2
@@ -32,7 +32,7 @@
         {% call data_line("Address") %}
             <span class="mono">{{ address }}</span>
         {% endcall %}
-        {% call data_line("Total phase 2 rewards (not incentivized)") %}
+        {% call data_line("Total phase 2 rewards") %}
             {{ total_rewards | format_aleo_credit }}
         {% endcall %}
         {% call data_line("Total solutions found") %}
