--- a/webui/templates/faq.jinja2
+++ b/webui/templates/faq.jinja2
@@ -21,10 +21,11 @@
         <h4>I can't find my address</h4>
         <p>This usually means your address hasn't publicly appeared on the blockchain. An address would be logged when:</p>
         <ul>
-            <li>A prover submits a valid coinbase puzzle solution with the address</li>
+            <li>A prover submits a valid coinbase puzzle solution with the address during the incentive period (testnet3 only)</li>
             <li>(more to come when the network has more features)</li>
         </ul>
         <p>The explorer could only track what's included in the blocks, so if your address hasn't interacted with the blockchain in the above situations, you won't find it in the explorer.</p>
+        <p>Please note that currently the explorer is only tracking puzzle solutions during the incentive period. You won't find your address even if it has submitted valid solutions before or after the period.</p>
         <br>
         <h4>What exactly is "c/s"?</h4>
         <p>If the
