--- a/webui/templates/leaderboard.jinja2
+++ b/webui/templates/leaderboard.jinja2
@@ -33,7 +33,9 @@
         Testnet Aleo credits rewarded: {{ total_credit | format_aleo_credit }} / {{ target_credit | format_aleo_credit }}
         <div class="primary progress" role="progressbar">
             <div class="progress-meter" style="width: {{ ratio }}%">
+            {% if ratio > 1 %}
                 <p class="progress-meter-text">{{ "%.2f" % ratio }}%</p>
+            {% endif %}
             </div>
         </div>
     {% endif %}
