add epoch progress and update db schema

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -82,6 +82,11 @@
             font-size: 0.825rem;
         }
 
+        .note {
+            font-size: 0.75rem;
+            color: #999;
+        }
+
         .data-line {
             padding: 0.5rem 0;
             border-bottom: 1px solid #ccc;
