--- a/webui/templates/blocks.jinja2
+++ b/webui/templates/blocks.jinja2
@@ -40,7 +40,7 @@
                 {% for block in blocks %}
                     <tr>
                         <td><a href="/block?h={{ block.height }}">{{ block.height }}</a></td>
-                        <td>{{ block.height // 256 }}</td>
+                        <td>{{ block.height // 256 }} <span class="note">{{ block.height % 256 }} / 256</span></td>
                         <td>{{ block.timestamp | format_time | safe }}</td>
                         <td>{{ block.transaction_count }}</td>
                         <td>{{ block.proof_target }}</td>
