add back nodes page

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -62,7 +62,7 @@
         }
 
         .top-bar-right {
-            width: 50%;
+            width: 35%;
         }
 
         .menu .menu-text {
@@ -140,8 +140,8 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/blocks">Blocks</a></li>
                 <li><a href="/leaderboard">Leaderboard</a></li>
+                <li><a href="/nodes">Nodes</a></li>
                 <li><a href="/faq">FAQ</a></li>
-{#                <li><a href="/nodes">Nodes</a></li>#}
             </ul>
         </div>
         <div class="top-bar-right">
