--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -140,7 +140,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/blocks">Blocks</a></li>
                 <li><a href="/leaderboard">Leaderboard</a></li>
-                <li><a href="/nodes">Nodes</a></li>
+{#                <li><a href="/nodes">Nodes</a></li>#}
                 <li><a href="/faq">FAQ</a></li>
             </ul>
         </div>
