--- a/webui/templates/calc.jinja2
+++ b/webui/templates/calc.jinja2
@@ -47,7 +47,7 @@
             </div>
         </form>
         <p>
-            Time to mine a block (dd:hh:mm:ss):
+            Time to find a solution (dd:hh:mm:ss):
             <br> <span id="result"></span><br>
         </p>
     </div>
