--- a/webui/templates/macros.jinja2
+++ b/webui/templates/macros.jinja2
@@ -38,6 +38,17 @@
 </nav>
 {%- endmacro %}
 
+{% macro data_line_safe(title) %}
+    <div class="data-line grid-x grid-padding-x">
+        <div class="cell small-3 block-data-line-label">
+            {{ title | safe }}
+        </div>
+        <div class="cell auto data-line-value">
+            {{ caller() }}
+        </div>
+    </div>
+{% endmacro %}
+
 {% macro data_line(title) %}
     <div class="data-line grid-x grid-padding-x">
         <div class="cell small-3 block-data-line-label">
