update address page

--- a/webui/templates/address.jinja2
+++ b/webui/templates/address.jinja2
@@ -14,6 +14,10 @@
             color: #999;
         }
 
+        .tooltip {
+            max-width: 250px;
+        }
+
     </style>
 {% endblock %}
 
@@ -32,10 +36,10 @@
         {% call data_line("Address") %}
             <span class="mono">{{ address }}</span>
         {% endcall %}
-        {% call data_line_safe("Total incentive reward (<span data-tooltip title=\"Testnet3 credits. Divide by 5 to get mainnet reward.\">raw</span>)") %}
+        {% call data_line_safe("Total incentive reward (<span data-tooltip title=\"Testnet3 credits earned during incentive period (since block 130888). Divide by 5 to get converted mainnet reward amount.\">?</span>)") %}
             {{ total_incentive | format_aleo_credit }}
         {% endcall %}
-        {% call data_line("Total coinbase reward") %}
+        {% call data_line_safe("Total coinbase reward (<span data-tooltip title=\"Testnet3 credits earned since the start of the network.\">?</span>)") %}
             {{ total_rewards | format_aleo_credit }}
         {% endcall %}
         {% call data_line("Total solutions found") %}
