--- a/webui/templates/faq.jinja2
+++ b/webui/templates/faq.jinja2
@@ -26,6 +26,7 @@
         </ul>
         <p>The explorer could only track what's included in the blocks, so if your address hasn't interacted with the blockchain in the above situations, you won't find it in the explorer.</p>
         <br>
+
         <h4>What exactly is "c/s"?</h4>
         <p>If the
             <span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>tooltip</span> can't satisfy you:
@@ -43,6 +44,16 @@
             simply means "solutions per second" (which is also correct if you take "solutions" as "partial solutions").
             Those units are also being used by different provers and websites, but they all should represent the same
             thing.
+        </p>
+        <br>
+
+        <h4>I'm blocked by the website</h4>
+        <p>
+            You are encouraged to run an explorer instance yourself if you want to get the info programatically. I will
+            monitor the website and ban any client which shows automatic behavior.
+        </p>
+        <p>
+            Block decisions are final.
         </p>
 
     </div>
