--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -24,6 +24,10 @@
             margin-bottom: 0 !important;
         }
 
+        .container {
+            margin: 0 20px;
+        }
+
         .content {
             max-width: 1280px;
             margin: auto;
@@ -58,7 +62,7 @@
             flex: 1 1 auto;
             margin: auto;
             display: flex;
-            padding: 0 8px;
+            padding: 0 20px;
         }
 
         .top-bar-right {
@@ -196,6 +200,7 @@
     </div>
     </div>
 {% endif %}
+<div class="container">
 {% block content %}{% endblock %}
 <div class="footer-container">
     <div class="settings">
@@ -209,6 +214,7 @@
         <a href="/privacy">Privacy policy</a>.
         <br>
     </div>
+</div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
