add blue shade to top bar

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -65,6 +65,10 @@
             padding: 0 20px;
         }
 
+        .top-bar, .top-bar ul {
+            background-color: #e1e7f8;
+        }
+
         .top-bar-right {
             width: 35%;
         }
