--- a/webui/templates/cf.jinja2
+++ b/webui/templates/cf.jinja2
@@ -1,184 +1,8 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="format-detection" content="telephone=no">
-    <title>{% block title %}{% endblock %}</title>
-    {#    <style>#}
-    {#        body {#}
-    {#            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";#}
-    {#            line-height: 1.35;#}
-    {#        }#}
-    {#    </style>#}
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.4/css/foundation.min.css"
-          integrity="sha512-TgmH0v8FUwmsr3yDgd5PTCgR6lRZ2Q5c7KsUNTHcoxZpOExCX16MYECIL4xdRQOhQlz7pCnZlmA4zda58QWxBw=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <style>
-
-        .global-banner {
-            margin-bottom: 0 !important;
-        }
-
-        .content {
-            max-width: 1280px;
-            margin: auto;
-            padding: 8px;
-            font-size: 0.9rem;
-        }
-
-        .footer-container {
-            padding: 0 8px;
-        }
-
-        .footer {
-            max-width: 1280px;
-            margin: auto;
-            padding: 8px;
-            font-size: 0.875rem;
-        }
-
-        .settings {
-            max-width: 1280px;
-            margin: auto;
-            padding: 32px 8px 8px 8px;
-            font-size: 0.875rem;
-        }
-
-        #search {
-            width: 100%;
-        }
-
-        .menubar {
-            max-width: 1280px;
-            flex: 1 1 auto;
-            margin: auto;
-            display: flex;
-            padding: 0 8px;
-        }
-
-        .top-bar-right {
-            width: 35%;
-        }
-
-        .menu .menu-text {
-            padding-left: 0;
-        }
-
-        .top-bar input {
-            max-width: 100%;
-        }
-
-        .input-group {
-            margin-bottom: 0;
-        }
-
-        .mono {
-            font-family: monospace;
-            font-size: 0.825rem;
-        }
-
-        .note {
-            font-size: 0.75rem;
-            color: #999;
-        }
-
-        .data-line {
-            padding: 0.5rem 0;
-            border-bottom: 1px solid #ccc;
-        }
-
-        .sub-data-line {
-            padding: 0.5rem 0 0.5rem 1rem;
-            border-bottom: 1px solid #ccc;
-        }
-
-        .data-line-value {
-            overflow-wrap: break-word;
-        }
-
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-        input[type=number] {
-            -moz-appearance:textfield;
-        }
-
-        .pagination {
-            display: inline-block;
-        }
-
-        #goto {
-            display: inline-block;
-        }
-
-        #goto input {
-            height: 2rem;
-            width: 50px;
-        }
-
-        .disabled-link {
-            pointer-events: none;
-            cursor: default;
-            color: #999;
-        }
-
-    </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-            integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.4/js/foundation.min.js"
-            integrity="sha512-+CnEgueYRDzx2s3IIAOpZd8HeOfrSbK3loeHw0jXJODAe3eFROHpBxEsun2kU+sZCaoAA0eFJrhfVV3RGG50GA=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-        $(document).foundation()
-    </script>
-    {% block head %}{% endblock %}
+    <title></title>
 </head>
 <body>
-
-<div class="top-bar">
-    <div class="menubar">
-        <div class="top-bar-left">
-            <ul class="menu">
-                <li class="menu-text">Haruka's Aleo Explorer</li>
-                <li><a class="disabled-link">Home</a></li>
-                <li><a class="disabled-link">Blocks</a></li>
-                <li><a class="disabled-link">Leaderboard</a></li>
-{#                <li><a href="/nodes">Nodes</a></li>#}
-                <li><a class="disabled-link">FAQ</a></li>
-            </ul>
-        </div>
-        <div class="top-bar-right">
-            <ul class="menu">
-                <!--suppress HtmlUnknownTag -->
-                <form id="search" action="/search">
-                    <div class="input-group">
-                        <input class="input-group-field" type="search" name="q" value="{{ query }}" placeholder="Search (block height, object id, object id prefix)">
-                        <div class="input-group-button">
-                            <button type="submit" class="button" disabled>Search</button>
-                        </div>
-                    </div>
-                </form>
-            </ul>
-        </div>
-    </div>
-</div>
-<div class="content">
-{{ placeholder }}
-</div>
-<div class="footer-container">
-    <div class="settings">
-        Timezone display: -<br>
-        Advanced mode: -<br>
-    </div>
-    <div class="footer">
-        <a href="https://github.com/HarukaMa/aleo-explorer" target="_blank">Open source</a> Aleo explorer made by Haruka. <br>
-    </div>
-</div>
 </body>
 </html>
