--- a/webui/templates/transition.jinja2
+++ b/webui/templates/transition.jinja2
@@ -123,5 +123,5 @@
 
     </div>
 
-{#    <script src="static/leo_wallet.js"></script>#}
+    <script src="static/leo_wallet.js"></script>
 {% endblock %}
