--- a/webui/templates/transaction.jinja2
+++ b/webui/templates/transaction.jinja2
@@ -41,7 +41,7 @@
             {% call data_line("Global state root") %}
             <span class="mono">{{ global_state_root }}</span>
             {% endcall %}
-            {% call data_line("Local state root") %}
+            {% call data_line("Inclusion proof") %}
                 {% if inclusion_proof %}
                     <advanced-link scope="transaction" object="{{ tx_id }}" type="inclusion_proof">
                         <span class="mono">{{ inclusion_proof }}</span>
