list all deployed programs

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -143,12 +143,18 @@
 <div class="top-bar">
     <div class="menubar">
         <div class="top-bar-left">
-            <ul class="menu">
+            <ul class="dropdown menu" data-dropdown-menu>
                 <li class="menu-text">Haruka's Aleo Explorer</li>
                 <li><a href="/">Home</a></li>
                 <li><a href="/blocks">Blocks</a></li>
-                <li><a href="/leaderboard">Leaderboard</a></li>
-                <li><a href="/calc">Calc</a></li>
+                <li><a href="/programs">Programs</a></li>
+                <li>
+                    <a href="#">Proving</a>
+                    <ul class="menu">
+                        <li><a href="/leaderboard">Leaderboard</a></li>
+                        <li><a href="/calc">Calc</a></li>
+                    </ul>
+                </li>
                 <li><a href="/faq">FAQ</a></li>
             </ul>
         </div>
