--- a/webui/templates/transition.jinja2
+++ b/webui/templates/transition.jinja2
@@ -10,6 +10,13 @@
             margin: 20px 4px;
         }
 
+        #wallet-connect-button {
+            margin-bottom: 0;
+        }
+
+        #wallet-connect-text {
+            margin-left: 8px;
+        }
 
     </style>
 
@@ -55,6 +62,7 @@
 
         <div class="data">
             <a href="#" class="button primary" id="wallet-connect-button" style="display: none">Connect Wallet</a>
+            <span id="wallet-connect-text"></span>
             <h4>Function call</h4>
             {% call data_line("Function signature") %}
                 <span class="mono">{{ function_signature }}</span>
@@ -127,6 +135,7 @@
     <script src="static/leo_wallet.js"></script>
     <script>
         const button = document.getElementById("wallet-connect-button")
+        const text = document.getElementById("wallet-connect-text")
         let wallet = null
         if (window.LeoWallet !== undefined) {
             wallet = new window.LeoWallet.LeoWalletAdapter({appName: "Haruka's Aleo Explorer"})
@@ -149,7 +158,7 @@
                         re.removeChild(c)
                     }
                 }
-
+                text.innerText = ""
                 return
             }
             try {
@@ -157,12 +166,15 @@
             } catch (e) {
                 button.className = "button alert"
                 button.innerText = "Connect failed"
+                text.innerText = e
             }
             if (wallet.connected) {
                 button.className = "button success"
                 const address = wallet.publicKey
                 button.innerHTML = `Connected to address <span class="mono">${address.substring(0, 9) + "..." + address.substring(address.length - 6)}</span>`
+                text.innerText = "Trying to decrypt all records..."
                 const records = document.getElementsByClassName("record")
+                let counter = 0
                 for (const re of records) {
                     console.log(re.innerHTML)
                     console.log(re.children)
@@ -171,7 +183,19 @@
                         const element = document.createElement("span")
                         element.innerHTML = `<br>${plaintext.replaceAll("\n", "<br>").replaceAll(" ", "&nbsp;")}`
                         re.appendChild(element)
+                        counter++
                     } catch (e) {}
+                }
+                if (counter > 0) {
+                    let english
+                    if (counter === 1) {
+                        english = "record"
+                    } else {
+                        english = "records"
+                    }
+                    text.innerText = `Decrypted ${counter} ${english}.`
+                } else {
+                    text.innerText = "No record could be decrypted."
                 }
             } else {
                 button.className = "button alert"
