--- a/webui/templates/programs.jinja2
+++ b/webui/templates/programs.jinja2
@@ -37,7 +37,7 @@
                         <td><span class="mono">{{ program.program_id }}</span></td>
                         <td><a href="/block?h={{ program.height }}">{{ program.height }}</a></td>
                         <td><span class="mono"><a href="/transaction?id={{ program.transaction_id }}">{{ program.transaction_id }}</a></span></td>
-                        <td>{{ program.times_called }}</td>
+                        <td>{{ program.called }}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
